--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
+    "@mui/material": "^6.1.4",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@toruslabs/config": "^2.2.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -48,10 +53,11 @@
     "@toruslabs/eslint-config-typescript": "^3.3.3",
     "@types/http-cache-semantics": "^4.0.4",
     "@types/minimist": "^1.2.5",
-    "@types/node": "^20.16.11",
+    "@types/node": "^20.16.12",
     "@types/normalize-package-data": "^2.4.4",
-    "@types/react": "^18.3.7",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.20",
