--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@walletconnect/sign-client": "^2.16.2",
     "@walletconnect/utils": "^2.16.2",
-    "@web3auth/auth-adapter": "^9.0.2",
+    "@web3auth/auth-adapter": "^9.3.0",
     "@web3auth/base": "^9.0.2",
     "@web3auth/default-evm-adapter": "^9.1.0",
-    "@web3auth/ethereum-provider": "^9.0.2",
+    "@web3auth/ethereum-provider": "^9.3.0",
     "@web3auth/modal": "^9.1.0",
     "@web3auth/modal-react-hooks": "^9.1.0",
     "@web3auth/solana-provider": "^9.0.2",
+    "@web3auth/wallet-services-plugin": "^9.3.0",
     "@web3auth/wallet-services-plugin-react-hooks": "^9.1.0",
+    "@web3auth/ws-embed": "^3.1.0",
     "ethers": "^6.13.2",
     "hamburger-react": "^2.5.1",
     "jose": "^5.9.2",
