--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,41 @@
   "extends": "@toruslabs/config/tsconfig.default.json",
   "compilerOptions": {
     "paths": {
-      "@web3auth/*-adapter": ["./packages/adapters/*-adapter"],
-      "@web3auth/*-provider": ["./packages/providers/*-provider"],
-      "@web3auth/*": ["./packages/*"],
-      "@web3auth/*-plugin": ["./packages/plugins/*-plugin"]
+      "@web3auth/*-adapter": [
+        "./packages/adapters/*-adapter"
+      ],
+      "@web3auth/*-provider": [
+        "./packages/providers/*-provider"
+      ],
+      "@web3auth/*": [
+        "./packages/*"
+      ],
+      "@web3auth/*-plugin": [
+        "./packages/plugins/*-plugin"
+      ]
     },
-    "noEmit": true,             // Prevents emitting .js and .d.ts files
-    "isolatedModules": true,    // Required for Vite with TypeScript
-    "module": "ESNext",         // Let Vite handle the modules
-    "target": "ESNext",         // Let Vite handle the target environment
-    "jsx": "react-jsx",         // For React JSX support
-    "noUnusedLocals": false,    // Suppresses unused local variables
+    "noEmit": true, // Prevents emitting .js and .d.ts files
+    "isolatedModules": true, // Required for Vite with TypeScript
+    "module": "ESNext", // Let Vite handle the modules
+    "target": "ESNext", // Let Vite handle the target environment
+    "jsx": "preserve", // For React JSX support
+    "noUnusedLocals": false, // Suppresses unused local variables
     "noUnusedParameters": false, // Suppresses unused parameters
-    "types": ["node"],
-    "allowJs": true,            // Allows JavaScript files
-    "checkJs": true             // Enables type-checking for JavaScript files
+    "types": [
+      "node"
+    ],
+    "allowJs": true, // Allows JavaScript files
+    "checkJs": true // Enables type-checking for JavaScript files
+    ,
+    "incremental": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "next.config.js"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "next.config.js"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
